src/test/ui/parser/swapped-pub-async.rs
/// doc comment
async pub fn foo() -> impl Future<..> {}
